test/tests/compiler/14_pointers/invalid_types/assign_int_to_pointer.plx
#  It's illegal to assign an integer to a pointer,
#  * because an integer cannot be implicitly converted
#  * to pointer type
#  
pub fn main(none) i32 {
    x: *i32;
    x = 10
    return 0
}
